1999-06-19  Stefan Monnier  <monnier@cs.yale.edu>

	* release: 3.9.2

	* sml-proc.el (sml-error-regexp-alist): solved the pathological
	  font-locking on long lines.

	* sml-move.el (sml-forward-sexp): slightly improved.

1999-06-17  Stefan Monnier  <monnier@cs.yale.edu>

	* sml-mode.el (sml-insert-form): Only add a space if needed.
	(sml-electric-space): new command bound to M-SPC.

	* sml-defs.el (sml-close-paren): added a second field that specifies when
	  not to delegate.  Only used for `else'.

1999-06-16  Stefan Monnier  <monnier@cs.yale.edu>

	* sml-move.el (sml-(for|back)ward-sym): distinguishes between
	  operator "=" and syntax for definitions "d=".

	* sml-defs.el (sml-indent-starters, sml-delegate): simplified.
	(sml-symbol-indent): added outdentation for `fn' and generalized it to
	  also work for `of' and `in' and `end'.

	* sml-mode.el (sml-nested-if-indent): reintroduced as well as the special
	  casing code for it.
	(sml-indent-relative): generalize the treatment of `of', `in', `end', ...
	(sml-electric-pipe): removed the slow behavior and added smarts for the
	  never-used type-variable arguments for function definitions.

1999-06-15  Stefan Monnier  <monnier@cs.yale.edu>

	* sml-defs.el (sml-mode-menu), sml-mode.el (sml-forms-menu): make the menu
	  dynamically.

	* sml-mode.el (sml-form-<foo>): use skeletons.
	(sml-calculate-indentation): added `with' indentation.

1999-06-14  Stefan Monnier  <monnier@cs.yale.edu>

	* sml-move.el (sml-(for|back)ward-sym): now also return the string if any
	  and take care of the "op" special keyword.
	(sml-op-prec): setup an alist for the infix operators.

	* version 3.9.1:  sent to Roland McGrath.

1999-06-13  Stefan Monnier  <monnier@cs.yale.edu>

	* sml-smlnj.el, sml-mosml.el, sml-poly-ml.el: removed.

	* sml-proc.el (...): got rid of sml-next-error by spicing up the interface
	  with compile.el so that intervals can be displayed.  `sml-overlay' is